# gnome-battery-bench

./: .gitignore  .gitlab-ci.yml  Makefile  Makefile.am  README  TODO  application.c  autogen.sh  configure  configure.ac  evdev-player.c  evdev-player.h  event-player.c  event-player.h  event-recorder.c  event-recorder.h  gnome-battery-bench.doap  gnome-battery-bench.gresource.xml  gnome-battery-bench.xml  gui.c  introspection.c  introspection.h  power-monitor.c  power-monitor.h  remote-player.c  replay-helper.c  system-state.c  util.c  xinput-wait.c  xinput-wait.h
data/: Makefile.am  org.gnome.BatteryBench.Helper.conf  org.gnome.BatteryBench.Helper.policy  org.gnome.BatteryBench.Helper.service.in  org.gnome.BatteryBench.desktop  org.gnome.BatteryBench.service.in
docs/: Makefile.am  asciidoc.conf  gbb.txt
src/: 0001-Stuff.patch  Makefile.am  TODO  application.c  application.h  application.ui  battery-test.c  battery-test.h  commandline.c  evdev-player.c  evdev-player.h  event-log.c  event-log.h  event-player.c  event-recorder.c  gnome-battery-bench.gresource.xml  gnome-battery-bench.xml  integration-test  power-graphs.c  power-graphs.h  power-graphs.ui  power-monitor.c  power-monitor.h  power-supply.c  power-supply.h  powertest.c  remote-player.c  remote-player.h  replay-helper.c  system-info.c  system-info.h  system-state.c  system-state.h  test-run.c  test-run.h  test-runner.c  test-runner.h  util-gtk.c  util-gtk.h  util-sysfs.c  (+3 more)
tests/: Makefile.am  idle.batterytest  idle.loop  lightduty.batterytest  lightduty.epilogue  lightduty.loop  lightduty.prologue  standard.batterytest
